[package]
name = "threshold-threshold-ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", features = ["std", "getrandom"] }
k256 = "0.13"
ciphersuite = { git = "https://github.com/serai-dex/serai", features = ["std", "secp256k1"] }
elliptic-curve = "0.13"
ecdsa = { version = "0.16", features = ["verifying", "hazmat"] }

[patch.crates-io]
# https://github.com/rust-lang-nursery/lazy-static.rs/issues/201
# lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", rev = "5735630d46572f1e5377c8f2ba0f79d18f53b10c" }
