[package]
name = "threshold-threshold-ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", features = ["std", "getrandom"] }
rand_chacha = "0.3"

transcript = { package = "flexible-transcript", git = "https://github.com/serai-dex/serai" }

k256 = "0.13"
ciphersuite = { git = "https://github.com/serai-dex/serai", features = ["std", "secp256k1"] }
elliptic-curve = "0.13"
ecdsa = { version = "0.16", features = ["verifying", "hazmat"] }

crypto-bigint = { version = "0.5", features = ["extra-sizes"] }
crypto-primes = "0.5"

num-traits = "0.2"
num-integer = "0.1"
num-bigint = "0.4"

[dev-dependencies]
transcript = { package = "flexible-transcript", git = "https://github.com/serai-dex/serai", features = ["recommended"] }

[patch.crates-io]
# https://github.com/rust-lang-nursery/lazy-static.rs/issues/201
# lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", rev = "5735630d46572f1e5377c8f2ba0f79d18f53b10c" }

[profile.dev.package]
generic-array = { opt-level = 3 }
crypto-common = { opt-level = 3 }
crypto-bigint = { opt-level = 3 }
crypto-primes = { opt-level = 3 }
num-traits = { opt-level = 3 }
num-integer = { opt-level = 3 }
num-bigint = { opt-level = 3 }
