[package]
name = "threshold-threshold-ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", features = ["std", "getrandom"] }
rand_chacha = "0.3"

transcript = { package = "flexible-transcript", git = "https://github.com/serai-dex/serai" }

k256 = "0.13"
ciphersuite = { git = "https://github.com/serai-dex/serai", features = ["std", "secp256k1"] }
elliptic-curve = "0.13"
ecdsa = { version = "0.16", features = ["verifying", "hazmat"] }

malachite = "0.4"

crypto-bigint = { version = "0.5", features = ["extra-sizes"] }
crypto-primes = "0.5"

[dev-dependencies]
transcript = { package = "flexible-transcript", git = "https://github.com/serai-dex/serai", features = ["recommended"] }

[profile.dev.package]
malachite-base = { opt-level = 3 }
malachite-nz = { opt-level = 3 }
malachite-q = { opt-level = 3 }
malachite = { opt-level = 3 }
